force-app/main/default/objects/Technician__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Routing flows filter active technicians</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>