force-app/main/default/objects/Technician__c/fields/Active_Daily_Workload__c.field-meta.xml
<CustomField>
    <fullName>Active_Daily_Workload__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Active Daily Workload</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>