force-app/main/default/objects/Technician__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <displayFormat>TECH-{0000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Provide the unique HR employee ID.</inlineHelpText>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>