force-app/main/default/objects/Technician__c/fields/Is_Capacity_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Capacity_Available__c</fullName>
    <description>Its explicitly made to make use of it in flow to assign technician based on availablity.</description>
    <formula>Active_Daily_Workload__c&lt;Max_Daily_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Capacity Available</label>
    <type>Checkbox</type>
</CustomField>