force-app/main/default/objects/Technician__c/fields/Max_Daily_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Max_Daily_Capacity__c</fullName>
    <formula>CASE(
    TEXT(Skill_Level__c),
    &quot;Junior&quot;, 3,
    &quot;Senior&quot;, 4,
    &quot;Master&quot;, 6,
     2
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Max Daily Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>