force-app/main/default/objects/Technician__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <inlineHelpText>Select all appliance specialities this technician is fully certified to service.</inlineHelpText>
    <label>Specialization</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>Heating</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Smart Controls</fullName>
            </value>
            <value>
                <fullName>General Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>