force-app/main/default/objects/Technician__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Technicians</relationshipLabel>
    <relationshipName>Technicians</relationshipName>
    <type>Lookup</type>
</CustomField>