force-app/main/default/objects/Technician__c/validationRules/VR_Technician_EmailDomainCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Technician_EmailDomainCheck</fullName>
    <active>true</active>
    <description>To ensure secure communications and prevent security leaks to external contractors, all internal field technicians must register using authorized company domains (@homeease.com or @homeease-partner.com).</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Email__c)),
NOT(
OR(
RIGHT(LOWER(Email__c),13)=&quot;@homeease.com&quot;,
RIGHT(LOWER(Email__c),21)=&quot;@homeease-partner.com&quot;
)
)
)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Technician email address must utilize a verified company domain ending in @homeease.com or @homeease-partner.com.</errorMessage>
</ValidationRule>